; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/proc/extr_kcore.c_notesize.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/proc/extr_kcore.c_notesize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memelfnote = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.memelfnote*)* @notesize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @notesize(%struct.memelfnote* %0) #0 {
  %2 = alloca %struct.memelfnote*, align 8
  %3 = alloca i32, align 4
  store %struct.memelfnote* %0, %struct.memelfnote** %2, align 8
  store i32 4, i32* %3, align 4
  %4 = load %struct.memelfnote*, %struct.memelfnote** %2, align 8
  %5 = getelementptr inbounds %struct.memelfnote, %struct.memelfnote* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 8
  %7 = call i64 @strlen(i32 %6)
  %8 = add nsw i64 %7, 1
  %9 = call i64 @roundup(i64 %8, i32 4)
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %11, %9
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %3, align 4
  %14 = load %struct.memelfnote*, %struct.memelfnote** %2, align 8
  %15 = getelementptr inbounds %struct.memelfnote, %struct.memelfnote* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = call i64 @roundup(i64 %16, i32 4)
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %19, %17
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i64 @roundup(i64, i32) #1

declare dso_local i64 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
